@@ -37,6 +37,8 @@ Other Changes:
 
 - Fixed calling DestroyContext() always saving .ini data with the current context instead
   of the supplied context pointer. (#2066)
+- Fixed calling SetNextWindowSize()/SetWindowSize() with non-integer values leading to 
+  accidental alteration of window position. We now round the provided size. (#2067)
   
 
 -----------------------------------------------------------------------
